# TestBot

./: .gitignore  README.md  diff.txt  init_testenv.sh  instructor_commits.txt  mypy.ini  pyproject.toml  test_braintrust.py  test_commit.py  test_instructor.py  test_jinja.py  test_llm.py  test_mypy.py
.testbot/store/: repos.json  tests.json
alembic/: env.py
alembic/versions/: ca326ec2baa0_initial.py
src/: test_glob.py
src/cowboy/: cli.py
src/cowboy/code/: code.py  langs.py  lint.py  source_file.py
src/cowboy/code/parser/: base.py  python.py
src/cowboy/models/: core.py
src/cowboy/parsing/repo/: diff.py  repository.py  runner.py  source_repo.py
src/testbot/: cli.py  code.py  config.py  diff.py  llm.py  logger.py  terminal.py  utils.py
src/testbot/code/: __init__.py
src/testbot/evaluations/: build_commits.py  cli.py  eval_store.py  evaluation.py  models.py  utils.py
src/testbot/evaluations/evals/: README.md  __init__.py  eval_patch.py
src/testbot/evaluations/evals/diff_testgen/: eval_patch.py
src/testbot/llm/: llm.py
src/testbot/llm/costs/: claude.json  deepseek.json  gpt4o.json
src/testbot/models/: core.py
src/testbot/store/: __init__.py  exceptions.py  json_store.py  models.py  store.py
src/testbot/workflow/: __init__.py  base.py
src/testbot/workflow/init/: core.py  lmp.py
src/testbot/workflow/pre_commit/: core.py
src/testbot/workflow/test_diff/: core.py  evals.py  lmp.py
tests/: conftest.py  test_commit.py  test_diffworkflow.py  test_initrepo.py  test_precommit.py  test_store.py
