[tool.poetry]
name = "cowboy"
version = "0.1.0"
description = ""
authors = ["John Peng"]
readme = "README.md"

packages = [
    { include = "cowboy", from = "src" }
]

[tool.poetry.scripts]
cowboy = "cowboy.cli:main"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.14.1"
sqlmodel = "^0.0.22"
tiktoken = "^0.8.0"
instructor = "^1.7.2"
litellm = "^1.59.3"
pydantic = "^2.10.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
